# cengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/glad/: glad.c  glad.h
res/shaders/: frag.glsl  glyph_vert.glsl  vert.glsl
scripts/: core.wren  main.wren  tst.wren
src/: main.c
src/engine/: engine.h
src/engine/Core/: DisplayManager.c  DisplayManager.h  MasterRenderer.c  MasterRenderer.h  MeshLoader.c  MeshLoader.h  Renderer.c  Renderer.h  Shader.c  Shader.h  ShaderProgram.c  ShaderProgram.h
src/engine/GUI/: Label.c  Label.h
src/engine/GameObject/: Camera.c  Camera.h  Entity.c  Entity.h  Light.c  Light.h  Terrain.c  Terrain.h
src/engine/Script/: Wren.c  Wren.h
src/engine/Utils/: Arr.c  Arr.h  Assoc.h  FileUtils.c  FileUtils.h  Mat.c  Mat.h  Mem.c  Mem.h  Misc.h  Primitives.h
